--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ form{
     width: 275px;
     height: auto;
 }
-h2{
+form h2{
     font-family: 'Rampart One', cursive;font-size: 30pt;color: aliceblue;
 }
 input{
@@ -21,7 +21,8 @@ input{
     color: aliceblue;
     font-size: 20px;
     outline: none;
-    font-family: 'Courgette', cursive;
+    font-family: 'Courgette', 'Noto Nastaliq Urdu';
+    
 }
 button{
     display: block;
@@ -38,4 +39,58 @@ button{
     color: #fff;
     font-size: 14pt;
     font-family: 'Arbutus Slab', serif;
+}
+#city{
+    margin:0;
+    padding:0;
+    display:flex;
+}
+.liCity{
+    list-style: none;
+    width:200px;
+    height: 300px;
+    background-color:aliceblue;
+    border-radius: 8px;
+    margin-right: 15px;
+    text-align: center;
+    padding: 10px;
+    box-shadow: 3px 3px 4px aquamarine;
+}
+
+.liCity img{
+    color:black;
+}
+
+#cityNameLi{
+    font-size:30px;
+    margin-top: 6px;margin-bottom: 10px;
+    font-family: 'Arbutus Slab', 'Noto Nastaliq Urdu';
+}
+#tempLi{
+    color: rgb(27, 27, 27);
+    font-family: 'Arbutus Slab', 'Noto Nastaliq Urdu'; font-size: 35px;
+    margin-top: 6px;margin-bottom: 10px;
+}
+#windSpeed{
+    color: rgb(27, 27, 27);
+    font-family: 'Courgette', 'Noto Nastaliq Urdu'; font-size: 20px;
+    margin-top: 15px;margin-bottom: 10px;
+}
+#div1{
+    display: flex;justify-content: center;
+}
+#div1 h4{
+    padding-left: 8px;
+    font-size: 18px;
+    margin: 14px 0;
+    font-family: 'Arbutus Slab', 'Noto Nastaliq Urdu';
+}
+#div2{
+    display: flex;justify-content: center;
+}
+
+#div2 p {
+    padding-left: 5px;
+    font-size: 30px;
+    margin: 11px 0;
 }
